* Fixed Reloader in some extreme scenarios
* Make methods of Padrino::Application that act as Padrino Core
* Fixed error logging
* Added Padrino.clear, useful to clean a Padrino Enviroment
* Improved granularity of our reloader locking and prevent reloading of unnecessary deps
* Use Sequel::Model.db= instead of DB= because is more simple change on the fly connections

== 0.9.28

* Fixed couchrest Account Model
* Generate SystemTimer for Mongoid only if Ruby 1.8 [Thanks to RoryO]
* Generate SystemTimer for Mongomapper only if Ruby 1.8
* Add `padrino s` as alias for `padrino start`
* Fixed Gemfile for couchrest
* Updated Gemfile for mongoid
* Fix a possible loop in require_dependencies
* Added padrino rake gen useful to create a Rakefile to handle for example with heroku

== 0.9.27

* Use sass gem, because now is separated from haml
* Escape regex in our reloader
* Use CouchRest::Model instead of CouchRest::ExtendedDocument [Thanks Burgestrand!]
* Fixes issues with offline generation of js (from padrino-static)
* Fixes YAML parsing bug by using syck
* Use sinatra 1.2.5
* Make logger sinatra 1.3 compat
* Use new sqlite3 gem in generated projects
* Removed padrino_logging and use instead simple logging to avoid conflicts
* By default use logging only on development
* Uses raise_errors, dump_errors, show_exceptions as Sinatra::Base do
* Refactored Padrino::Application
* Added a global configuration in config/apps.rb used by each Padrino Applicaitons
* Moved session_secret in global configuration project
* Use SecureRandom to generate session secret
* Support 'partial' in Sinatra with explicit engine
* Added recognize_path method ex: recognize_path(request.referrer) => [:controller_action, { :id => 1 }]
* Added current_path method ex: current_path(:merge => :param) => "/current/1234/merge/param"
* Support for jruby-memcache-client/memcache-client
* Added MongoMapper task for drop database

== 0.9.26

* Padrino::Logger compatible with Rack::CommonLogger