@@ -1,10 +1,26 @@
 COUCHREST = (<<-COUCHREST) unless defined?(COUCHREST)
 case Padrino.env
-  when :development then COUCHDB_NAME = '!NAME!_development'
-  when :production  then COUCHDB_NAME = '!NAME!_production'
-  when :test        then COUCHDB_NAME = '!NAME!_test'
+  when :development then db_name = '!NAME!_development'
+  when :production  then db_name = '!NAME!_production'
+  when :test        then db_name = '!NAME!_test'
 end
-COUCHDB = CouchRest.database!(COUCHDB_NAME)
+
+CouchRest::Model::Base.configure do |conf|
+  conf.model_type_key = 'type' # compatibility with CouchModel 1.1
+  conf.database = CouchRest.database!(db_name)
+  # Only with CouchModel 1.1
+  # conf.environment = Padrino.env
+  # conf.connection = {
+  #   :protocol => 'http',
+  #   :host     => 'localhost',
+  #   :port     => '5984',
+  #   :prefix   => 'padrino',
+  #   :suffix   => nil,
+  #   :join     => '_',
+  #   :username => nil,
+  #   :password => nil
+  # }
+end
 COUCHREST
 
 def setup_orm
@@ -16,8 +32,6 @@ end
 
 CR_MODEL = (<<-MODEL) unless defined?(CR_MODEL)
 class !NAME! < CouchRest::Model::Base
-  use_database COUCHDB
-
   unique_id :id
   # property <name>
   !FIELDS!
