@@ -15,6 +15,7 @@
 * Added Padrino.clear, useful to clean a Padrino Enviroment
 * Improved granularity of our reloader locking and prevent reloading of unnecessary deps
 * Use Sequel::Model.db= instead of DB= because is more simple change on the fly connections
+* Added compatibility with CouchRest::Model 1.1+
 
 == 0.9.28
 
